Created folders for each user profile

--- a/HealthApp.Razor/Pages/Doctor/DoctorPatientListing.cshtml
+++ b/HealthApp.Razor/Pages/Doctor/DoctorPatientListing.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HealthApp.Razor.Pages.DoctorPatientListingModel
+@model HealthApp.Razor.Pages.Doctor.DoctorPatientListingModel
 
 @{
     ViewData["Title"] = "DoctorPatientListing";
