--- a/HealthApp.Razor/Pages/Admin/Admin.cshtml
+++ b/HealthApp.Razor/Pages/Admin/Admin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HealthApp.Razor.Pages.AdminModel
+@model HealthApp.Razor.Pages.Admin.AdminModel
 @{
 }
 <h1>Admin</h1>
@@ -18,7 +18,6 @@
     <tbody>
         @foreach (var patient in Model.Patients)
         {
-
             <tr>
                 <td>@patient.Id</td>
                 <td>@patient.FirstName</td>
