Fixed links in the navbar

--- a/HealthApp.Razor/Pages/Admin/DoctorPatientListing.cshtml
+++ b/HealthApp.Razor/Pages/Admin/DoctorPatientListing.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model HealthApp.Razor.Pages.Doctor.DoctorPatientListingModel
+@model HealthApp.Razor.Pages.Admin.DoctorPatientListingModel
 
 @{
     ViewData["Title"] = "DoctorPatientListing";
