--- a/HealthApp.Razor/Pages/Shared/_Layout.cshtml
+++ b/HealthApp.Razor/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Patient/PatientDashboard">Patient</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Patient/ScheduleAppointment">Appointment</a>
+                                </li>
                             }
                         }
 
