--- a/HealthApp.Razor/Pages/Shared/_Layout.cshtml
+++ b/HealthApp.Razor/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-page="/Doctor/DoctorDashboard">Appointment</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-page="/Doctor/CreatePrescription">Create Prescription</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-page="/Doctor/MyPrescriptions">My Prescriptions</a>
+                                </li>
                             }
                             if (User.IsInRole("Patient"))
                             {
@@ -52,6 +58,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-page="/Patient/MyAppointments">My Appointment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-page="/Patient/MyPrescriptions">My Prescriptions</a>
                                 </li>
                             }
                         }
