--- a/HealthApp.Razor/Pages/Shared/_Layout.cshtml
+++ b/HealthApp.Razor/Pages/Shared/_Layout.cshtml
@@ -30,10 +30,7 @@
                             if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Admin">Admin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Admin/DoctorPatientListing">Doctor Patient</a>
+                                    <a class="nav-link text-dark" asp-page="/Admin/AdminDashboard">Dashboard</a>
                                 </li>
                             }
                             if (User.IsInRole("Doctor"))
