--- a/HealthApp.Razor/Pages/Admin/PatientsList.cshtml
+++ b/HealthApp.Razor/Pages/Admin/PatientsList.cshtml
@@ -26,4 +26,31 @@
             }
         </tbody>
     </table>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
+                <a class="page-link" asp-route-pageNumber="@(Model.CurrentPage - 1)">Previous</a>
+            </li>
+
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                @if (i == Model.CurrentPage || (i <= 3 || i >= Model.TotalPages - 2 || (i >= Model.CurrentPage - 2 && i <= Model.CurrentPage + 2)))
+                {
+                    <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
+                        <a class="page-link" asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+                else if (i == 4 || i == Model.TotalPages - 3)
+                {
+                    <li class="page-item disabled"><span class="page-link">...</span></li>
+                }
+            }
+
+            <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")">
+                <a class="page-link" asp-route-pageNumber="@(Model.CurrentPage + 1)">Next</a>
+            </li>
+        </ul>
+    </nav>
+
 }
