--- a/HealthApp.Razor/Pages/Admin/DoctorsList.cshtml
+++ b/HealthApp.Razor/Pages/Admin/DoctorsList.cshtml
@@ -1,10 +1,10 @@
 ﻿@page "/Admin/DoctorsList"
 @model HealthApp.Razor.Pages.Admin.DoctorsListModel
 @{
-    <h2>Doctors List</h2>
+    <h2 class="text-primary fw-bold mb-4">Doctors List</h2>
 
-    <table class="table">
-        <thead>
+    <table class="table table-striped table-hover mt-4">
+        <thead class="table-dark text-center">
             <tr>
                 <th>Name</th>
                 <th>Actions</th>
@@ -15,9 +15,9 @@
             {
                 <tr>
                     <td>@doctor.Name</td>
-                    <td>
+                    <td class="text-center">
                         <form method="post" asp-page-handler="DeleteDoctor" asp-route-id="@doctor.Id">
-                            <button class="btn btn-danger">Delete</button>
+                            <button class="btn btn-danger btn-sm">Delete</button>
                         </form>
                     </td>
                 </tr>
