--- a/HealthApp.Razor/Pages/Admin/PatientsList.cshtml
+++ b/HealthApp.Razor/Pages/Admin/PatientsList.cshtml
@@ -1,10 +1,10 @@
 ﻿@page "/Admin/PatientsList"
 @model HealthApp.Razor.Pages.Admin.PatientsListModel
 @{
-    <h2>Patients List</h2>
+    <h2 class="text-primary fw-bold mb-4">Patients List</h2>
 
-    <table class="table">
-        <thead>
+    <table class="table table-striped table-hover mt-4">
+        <thead class="table-dark text-center">
             <tr>
                 <th>Name</th>
                 <th>Email</th>
@@ -17,9 +17,9 @@
                 <tr>
                     <td>@patient.FirstName @patient.LastName</td>
                     <td>@patient.Email</td>
-                    <td>
+                    <td class="text-center">
                         <form method="post" asp-page-handler="DeletePatient" asp-route-id="@patient.Id">
-                            <button class="btn btn-danger">Delete</button>
+                            <button class="btn btn-danger btn-sm">Delete</button>
                         </form>
                     </td>
                 </tr>
@@ -28,7 +28,7 @@
     </table>
 
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center mt-4">
             <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
                 <a class="page-link" asp-route-pageNumber="@(Model.CurrentPage - 1)">Previous</a>
             </li>
@@ -52,5 +52,4 @@
             </li>
         </ul>
     </nav>
-
 }
